samples/with-a-kube/components/20_sample_kube_app/namespaces/admin/files/deployment.yaml
# website::tag::1:: Deploy the training/webapp Docker Container: https://hub.docker.com/r/training/webapp/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files-deployment
spec:
  selector:
    matchLabels:
      app: files-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: files-deployment
    spec:
      containers:
        # website::tag::2:: The container runs a Python webapp on port 5000 that responds with "Hello, World!"
        - name: files-deployment
          image: filebrowser/filebrowser:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
