samples/with-a-kube/components/20_sample_kube_app/namespaces/admin/files/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: files-service
spec:
  selector:
    app: files-deployment
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80
